More simplifications by IntelliJ